tests/ui/decode-borrow-endpoint-alias.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> tests/ui/decode-borrow-endpoint-alias.rs:33:20
   |
33 |     endpoint: &mut Endpoint<'r, 0, SessionKit<'cfg, T, U, C, MAX_RV>>,
   |                    ^^^^^^^^      ----------------------------------- help: remove the unnecessary generic argument
   |                    |
   |                    expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `ROLE`
  --> src/endpoint.rs
   |
   | pub struct Endpoint<'r, const ROLE: u8> {
   |            ^^^^^^^^     --------------

error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/decode-borrow-endpoint-alias.rs:42:22
   |
40 |     let branch = futures::executor::block_on(endpoint.offer()).unwrap();
   |                                              -------- first mutable borrow occurs here
41 |     let payload = futures::executor::block_on(branch.decode::<g::Msg<7, FramePayload>>()).unwrap();
42 |     let next_offer = endpoint.offer();
   |                      ^^^^^^^^ second mutable borrow occurs here
43 |     core::hint::black_box(&next_offer);
44 |     core::hint::black_box(&payload);
   |                           -------- first borrow later used here
